Move report to subdirectory. Add references.

--- a/report/report.tex
+++ b/report/report.tex
@@ -247,4 +247,7 @@ The results for the gas phase are showed in figure \ref{fig:gas_cor}, from this 
 \end{figure}
 
 
+\bibliographystyle{plain}
+\bibliography{references}
+
 \end{document}
