References in the main file
The reference are now in the main file, so we don't need a separate
reference file

--- a/report/report.tex
+++ b/report/report.tex
@@ -261,7 +261,18 @@ We can further investigate the phase of the system by generate isothermal lines 
 \label{fig:isothermals}
 \end{figure}
 
-\bibliographystyle{plain}
-\bibliography{references}
+\newpage
+\begin{thebibliography}{9}
+
+\bibitem{thijssen}
+ J.M. Thijssen (2007)\\
+ $\textit{Computational Physics}$.\\
+ Cambridge University Press
+ 
+ \bibitem{lebowitz1967}
+ Lebowitz, J. L. and Percus, J. K. and Verlet, L. (1967)\\
+ $\textit{Ensemble Dependence of Fluctuations with Application to Machine Computations}$.\\
+ American Physical Society
+ \end{thebibliography}
 
 \end{document}
