improved the connection of all the sections in chapter 2

--- a/report/report.tex
+++ b/report/report.tex
@@ -69,14 +69,15 @@ asdfasdf
 
 \chapter{Theory}
 
-Four questions have to be answered in order to simulate argon, these are:
+In order to simulate argon four questions have to be answered, these are:
 \begin{enumerate}
  \item What is the interaction between the argon atoms?
  \item How do the argon atoms move around?
  \item What are the boundary conditions?
  \item What are the initial conditions?
 \end{enumerate}
-These will be answered in the following sections.
+These will be answered in the following sections.\\ \\
+The simulation can be verified by looking at a few properties of the argon interaction.\\ In this report pressure, specific heat, correlation function and diffusion constant are calculated in order to verify the correctness of the simulation.
 
 \section{Lennard-Jones potential}
 
