--- a/report/report.tex
+++ b/report/report.tex
@@ -271,7 +271,9 @@ We can further investigate the phase of the system by generate isothermal lines 
 \label{fig:isothermals}
 \end{figure}
 
+\section{Error analysis}
 
+There were different methods used to determine the error in the pressure and the heat capacity. Firstly the error in the pressure was determined by measuring the pressure over each 100 steps over the course of one simulation after equilibration, and thereafter the variance in these values were used as the error for the pressure. Secondly to determine the error in the heat capacity the simulation was ran 5 times and for each of these 5 times the heat capacity was calculated and the variance in these values were used as the error for the heat capacity.
 
 \chapter{Conclusion}
 
